--- a/app/views/adminLayout.jade
+++ b/app/views/adminLayout.jade
@@ -28,6 +28,9 @@ html
             a(href="/admin/category") 商品分类
           li#category
             a(href="/admin/activity") 活动
+          li#delivery
+            a(href="/order") 待发货订单
+            //- a(href="/order?status=待发货") 待发货订单
       .main
         block content
     include ./includes/admin-footer
