--- a/app/views/adminLayout.jade
+++ b/app/views/adminLayout.jade
@@ -29,7 +29,7 @@ html
           li#category
             a(href="/admin/activity") 活动
           li#delivery
-            a(href="/order") 待发货订单
+            a(href="/admin/delivery") 待发货订单
             //- a(href="/order?status=待发货") 待发货订单
       .main
         block content
