--- a/public/less/pc/public_admin.less
+++ b/public/less/pc/public_admin.less
@@ -178,6 +178,9 @@ header{
             padding: 15px 0;
             vertical-align: top;
           }
+          .img-column{
+            width: 90px;
+          }
           .name-column{
             p{
               width: 230px;
