--- a/app/views/admin/delivery/_input_express.jade
+++ b/app/views/admin/delivery/_input_express.jade
@@ -15,5 +15,5 @@
           .input-box
             input#exporess_number.required(type="text")
     .modal-footer
-      button.next.j-next.disabled(type="submit") 确定
-      button.cancle 取消
+      button.next.j-next.disabled(type="submit",data-dismiss="modal") 确定
+      button.cancle(data-dismiss="modal") 取消
