--- a/app/views/includes/header.jade
+++ b/app/views/includes/header.jade
@@ -1,5 +1,5 @@
 header.bar.bar-nav.j-bar
-  a.logo.fa.fa-user-o
+  a.logo.fa.fa-user-o(href="/user/home")
   form#search_form
     .search
       input.open-popup(type="text",name="keywords",placeholder="请输入搜索关键字：")
