--- a/app/views/mobile/order/create_order.jade
+++ b/app/views/mobile/order/create_order.jade
@@ -43,7 +43,7 @@ block content
         .total
           em 小计：
           em.right ￥#{sum}
-    .footer.cart-checkout(action="",method="POST")
+    .footer.cart-checkout
       .cart-counter
         p.pieces_count 共
           em.count #{count}
