--- a/app/views/mobile/user/index.jade
+++ b/app/views/mobile/user/index.jade
@@ -2,6 +2,10 @@ extends ../../layout
 
 block content
   .page.homepage
+    header.head-block.bar.bar-nav.header
+      a.arr(href="javascript:history.back();")
+        i.fa.fa-angle-left
+      h1.title 我的主页
     .home-header
       .portrait
         img(src="")
