--- a/public/less/global.less
+++ b/public/less/global.less
@@ -21,3 +21,4 @@
 @import './mobile/order.less';
 @import './mobile/address_list.less';
 @import './mobile/user.less';
+@import './mobile/evaluate.less';
