--- a/public/less/mobile/user.less
+++ b/public/less/mobile/user.less
@@ -10,6 +10,7 @@
     padding: 1rem;
     line-height: 3rem;
     border-bottom: 1px solid #e5e5e5;
+    margin-top: 2rem;
     .portrait{
       display: inline-block;
       font-size: 0;
