--- a/public/style/mobile/user.css
+++ b/public/style/mobile/user.css
@@ -11,6 +11,7 @@
   padding: 1rem;
   line-height: 3rem;
   border-bottom: 1px solid #e5e5e5;
+  margin-top: 2rem;
 }
 .homepage .home-header .portrait {
   display: inline-block;
