--- a/public/style/global.css
+++ b/public/style/global.css
@@ -1147,25 +1147,6 @@ header.bar.bar-nav form .search-btn {
 .popup-address .header.bar.bar-nav {
   background: #fff;
 }
-.popup-address .footer {
-  width: 100%;
-  position: absolute;
-  bottom: 0;
-  border-top: 1px solid #ccc;
-  height: 2rem;
-  background: #fff;
-}
-.popup-address .footer .new_address {
-  color: #fff;
-  text-align: center;
-  display: block;
-  width: 6rem;
-  height: 1.5rem;
-  line-height: 1.5rem;
-  border-radius: 0.75rem;
-  background: #fe406e;
-  margin: 0.25rem auto 0;
-}
 .popup-new,
 .popup-address {
   background: #f5f5f5;
@@ -1210,6 +1191,7 @@ header.bar.bar-nav form .search-btn {
   padding: 1rem;
   line-height: 3rem;
   border-bottom: 1px solid #e5e5e5;
+  margin-top: 2rem;
 }
 .homepage .home-header .portrait {
   display: inline-block;
@@ -1264,4 +1246,99 @@ header.bar.bar-nav form .search-btn {
   top: 0rem;
   right: 1rem;
   background: #ff5e7a;
+}
+.popup-address .footer,
+.evaluate .footer {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  border-top: 1px solid #ccc;
+  height: 2rem;
+  background: #fff;
+}
+.popup-address .footer .new_address,
+.evaluate .footer .new_address {
+  color: #fff;
+  text-align: center;
+  display: block;
+  width: 6rem;
+  height: 1.5rem;
+  line-height: 1.5rem;
+  border-radius: 0.75rem;
+  background: #fe406e;
+  margin: 0.25rem auto 0;
+}
+.evaluate .content {
+  padding-top: 2rem;
+}
+.evaluate .product {
+  padding: 0.5rem;
+  background: #fff;
+  margin-bottom: 0.5rem;
+}
+.evaluate .product-head {
+  background: #fafafa;
+  height: 3.2rem;
+  padding: 0.2rem 0.2rem 0.2rem 3.2rem;
+  line-height: 3rem;
+  position: relative;
+  margin-bottom: 0.5rem;
+}
+.evaluate .product-head .img-box {
+  position: absolute;
+  left: 0.2rem;
+  width: 3rem;
+  height: 3rem;
+  overflow: hidden;
+}
+.evaluate .product-head .img-box img {
+  width: 100%;
+}
+.evaluate .evlue-content {
+  color: #ababab;
+  resize: none;
+  width: 100%;
+  height: 6rem;
+  border: none;
+}
+.evaluate .satisfied {
+  display: -webkit-flex;
+  display: -moz-box;
+  /* Firefox */
+  display: -webkit-box;
+  /* Safari and Chrome */
+  display: box;
+  border-top: 1px solid #e5e5e5;
+}
+.evaluate .satisfied div {
+  text-align: center;
+  height: 3rem;
+  -webkit-box-flex: 1;
+  box-flex: 1;
+}
+.evaluate .satisfied .icon {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  background: url(../images/icon/flower-icon.png) no-repeat;
+  background-position: 0 -2px;
+  transform: scale(0.5, 0.5);
+}
+.evaluate .praise .icon {
+  background-position: 0 -158px;
+}
+.evaluate .praise.on .icon {
+  background-position: 0 -2px;
+}
+.evaluate .neutral .icon {
+  background-position: 0 -211px;
+}
+.evaluate .neutral.on .icon {
+  background-position: 0 -58px;
+}
+.evaluate .negative .icon {
+  background-position: 0 -264px;
+}
+.evaluate .negative.on .icon {
+  background-position: 0 -108px;
 }
