--- a/app/views/mobile/order/index.jade
+++ b/app/views/mobile/order/index.jade
@@ -31,7 +31,7 @@ block content
               .sum 共#{count}件 合计
                 em ￥88
               .operate
-                a.red-btn(href="#") 收货评价
+                a.red-btn(href="/evaluate/evaluate?_id=#{order._id}") 收货评价
                 a.red-btn.hide(href="") 确认收货
 
 block scripts
