--- a/app/views/mobile/evaluation/evaluate.jade
+++ b/app/views/mobile/evaluation/evaluate.jade
@@ -7,28 +7,28 @@ block content
         i.fa.fa-angle-left
       h1.title 收货评价
     .content.native-scroll.wrapper
-      form.product_list(action="",method="POST",enctype="multipart/form-data")
+      form#form.product_list(action="/evaluate/submit",method="POST",enctype="multipart/form-data")
         input(type="hidden",name="user_id",value="#{order.user_id}")
         each product,index in order.products
           .product
-            input(type="hidden",name="evl[#{index}[product_id]]",value="#{product.productId}")
+            input(type="hidden",name="prod[product_id]",value="#{product.productId}")
             .product-head
               .img-box
                 img(src="#{product.pics[0]}")
               p.name.ellipsis #{product.name}
-            textarea(name="evl[#{index}[content]]").evlue-content 建议您多说说使用后的效果感受，对其他小伙伴帮助很大哦~
+            textarea(name="#{product.productId}[content]").evlue-content 建议您多说说使用后的效果感受，对其他小伙伴帮助很大哦~
             .uploadpic
               i.fa.fa-camera-retro
-              input(type="file",name="evl[#{index}[imgs]]")
+              input(type="file",name="evl[imgs]")
             .satisfied
               .praise.on
-                input.icon(type="radio",name="evl[#{index}[grade]]",val="好评",checked)
+                input.icon(type="radio",name="#{product.productId}[grade]",value="好评",checked)
                 p 好评
               .neutral
-                input.icon(type="radio",name="evl[#{index}[grade]]",val="中评")
+                input.icon(type="radio",name="#{product.productId}[grade]",value="中评")
                 p 中评
               .negative
-                input.icon(type="radio",name="evl[#{index}[grade]]",val="差评")
+                input.icon(type="radio",name="#{product.productId}[grade]",value="差评")
                 p 差评
     .footer
       a.new_address.j-submit(href="javascript:;") 提交评论
@@ -36,7 +36,7 @@ block content
 block scripts
   script.
     $(function(){
-      $('.j-submit').on('click',function(e){
-        $('.product_list').submit();
+      $(document).on('click','.j-submit',function(e){
+        $('#form').submit();
       })
     })
