--- a/public/less/mobile/details.less
+++ b/public/less/mobile/details.less
@@ -263,3 +263,13 @@
     }
   }
 }
+
+.evaluate-list{
+  margin-top: 2rem;
+  .rates-list{
+    background: #fff;
+  }
+  .rate-item{
+    border-bottom: 1px solid #e5e5e5;
+  }
+}
