--- a/public/style/mobile/details.css
+++ b/public/style/mobile/details.css
@@ -256,3 +256,12 @@
   color: #fff;
   background: #ec312d;
 }
+.evaluate-list {
+  margin-top: 2rem;
+}
+.evaluate-list .rates-list {
+  background: #fff;
+}
+.evaluate-list .rate-item {
+  border-bottom: 1px solid #e5e5e5;
+}
