--- a/app/views/admin/delivery/index.jade
+++ b/app/views/admin/delivery/index.jade
@@ -60,4 +60,9 @@ block scripts
 
         $.post('/admin/order/update',data);
       });
+
+      $('.j-dropdown').on('click','li',function(e){
+        var exp = $(this).data('express');
+        $(this).parents('.j-dropdown').find('#exporess_name').val(exp);
+      })
     });
