--- a/app/views/admin/product_management/product_edit.jade
+++ b/app/views/admin/product_management/product_edit.jade
@@ -76,7 +76,7 @@ block content
           each label in product.labels
             span.labels.j-selected_lb
               span #{label}
-              i.glyphicon.glyphicon-remove
+              i.fa.fa-times-circle
   .footer
     button.btn.btn-primary.confirm.j-confirm 确定
     a.btn.btn-default(href="/admin") 取消
