--- a/public/less/pc/delivery.less
+++ b/public/less/pc/delivery.less
@@ -29,3 +29,13 @@
     }
   }
 }
+.returns{
+  .express-item{
+    width: 10rem;
+  }
+}
+.costom{
+  .imgbox,.reason{
+    display: inline-block;
+  }
+}
