--- a/public/style/admin.css
+++ b/public/style/admin.css
@@ -762,3 +762,10 @@ body {
 #express .dropdown .dropdown-menu li:hover {
   background: #e5e5e5;
 }
+.returns .express-item {
+  width: 10rem;
+}
+.costom .imgbox,
+.costom .reason {
+  display: inline-block;
+}
