--- a/public/style/pc/delivery.css
+++ b/public/style/pc/delivery.css
@@ -24,3 +24,10 @@
 #express .dropdown .dropdown-menu li:hover {
   background: #e5e5e5;
 }
+.returns .express-item {
+  width: 10rem;
+}
+.costom .imgbox,
+.costom .reason {
+  display: inline-block;
+}
