--- a/app/views/adminLayout.jade
+++ b/app/views/adminLayout.jade
@@ -31,6 +31,8 @@ html
           li#delivery
             a(href="/admin/delivery") 待发货订单
             //- a(href="/order?status=待发货") 待发货订单
+          li#returns
+            a(href="/admin/returns") 待退货订单
       .main
         block content
     include ./includes/admin-footer
