--- a/app/views/mobile/user/index.jade
+++ b/app/views/mobile/user/index.jade
@@ -29,7 +29,7 @@ block content
             i.fa.fa-commenting-o
             p 待评价
             .tips 10
-          a.block.return
+          a.block.return(href="/returns/list")
             i.fa.fa-retweet
             p 退货退款
             .tips 10
