--- a/app/views/includes/header.jade
+++ b/app/views/includes/header.jade
@@ -4,4 +4,4 @@ header.bar.bar-nav.j-bar
     .search
       input.open-popup(type="text",name="keywords",placeholder="请输入搜索关键字：")
       a.fa.fa-search.search-btn(href="javascript:;")
-  a.fa.fa-shopping-cart.badget(href="/cart")
+  a.fa.fa-shopping-cart.badget(href="/cart",external)
