--- a/app/views/includes/header.jade
+++ b/app/views/includes/header.jade
@@ -10,4 +10,4 @@ header.bar.bar-nav.j-bar
   if login
     a.fa.fa-shopping-cart.badget(href="/cart",external)
   else
-    a.fa.fa-shopping-cart.badget(href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxe751fb0e3060d859&redirect_uri=http%3A%2F%2Fbestyxie.cn%2Fcart&response_type=code&scope=snsapi_userinfo&state=userinfo#wechat_redirect",external)
+    a.fa.fa-shopping-cart.badget(href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxe751fb0e3060d859&redirect_uri=http%3A%2F%2Fbestyxie.cn%2Fcart&response_type=code&scope=snsapi_base&state=base#wechat_redirect",external)
