--- a/app/views/includes/header.jade
+++ b/app/views/includes/header.jade
@@ -1,6 +1,6 @@
 header.bar.bar-nav.j-bar
   if !login
-    a.logo.fa.fa-user-o(href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxe751fb0e3060d859&redirect_uri=http%3A%2F%2Fbestyxie.cn%2Fhome&response_type=code&scope=snsapi_base&state=base#wechat_redirect")
+    a.logo.fa.fa-user-o(href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxe751fb0e3060d859&redirect_uri=http%3A%2F%2Fbestyxie.cn%2Fuser%2Fhome&response_type=code&scope=snsapi_base&state=base#wechat_redirect")
   else
     a.logo.fa.fa-user-o(href="/user/home")
   form#search_form
