--- a/app/views/mobile/user/index.jade
+++ b/app/views/mobile/user/index.jade
@@ -8,8 +8,8 @@ block content
       h1.title 我的主页
     .home-header
       .portrait
-        img(src="")
-      p.name.ellipise #{user.name}
+        img(src="#{user.headimgurl}")
+      p.name.ellipise #{user.nickname}
     .application
       ul
         li.line
