home page style

--- a/public/less/mobile/user.less
+++ b/public/less/mobile/user.less
@@ -14,11 +14,15 @@
     .portrait{
       display: inline-block;
       font-size: 0;
-      width: 3rem;
-      height: 3rem;
+      width: 3.5rem;
+      height: 3.5rem;
       border-radius: 50%;
       border: 1px solid #e5e5e5;
       text-align: center;
+      overflow: hidden;
+      img{
+        width: 100%;
+      }
     }
     .name{
       -webkit-box-flex: 1;
