--- a/public/style/global.css
+++ b/public/style/global.css
@@ -1205,11 +1205,15 @@ header.bar.bar-nav form .search-btn {
 .homepage .home-header .portrait {
   display: inline-block;
   font-size: 0;
-  width: 3rem;
-  height: 3rem;
+  width: 3.5rem;
+  height: 3.5rem;
   border-radius: 50%;
   border: 1px solid #e5e5e5;
   text-align: center;
+  overflow: hidden;
+}
+.homepage .home-header .portrait img {
+  width: 100%;
 }
 .homepage .home-header .name {
   -webkit-box-flex: 1;
