--- a/public/style/mobile/user.css
+++ b/public/style/mobile/user.css
@@ -16,11 +16,15 @@
 .homepage .home-header .portrait {
   display: inline-block;
   font-size: 0;
-  width: 3rem;
-  height: 3rem;
+  width: 3.5rem;
+  height: 3.5rem;
   border-radius: 50%;
   border: 1px solid #e5e5e5;
   text-align: center;
+  overflow: hidden;
+}
+.homepage .home-header .portrait img {
+  width: 100%;
 }
 .homepage .home-header .name {
   -webkit-box-flex: 1;
