--- a/app/views/mobile/order/create_order.jade
+++ b/app/views/mobile/order/create_order.jade
@@ -23,7 +23,10 @@ block content
               .edit_addr
                 a.fa.fa-angle-right.open-popup(href="javascript:;",data-popup=".popup-address")
             else
-              a.open-popup(href="javascript:;",data-popup=".popup-new") 添加收货地址
+              .no-default
+                i.fa.fa-map-marker
+                p 还没有收货地址,
+                  a.open-popup(href="javascript:;",data-popup=".popup-new") 去添加
         .product
           ul.ui-list
             each product in products
