--- a/public/less/mobile/order.less
+++ b/public/less/mobile/order.less
@@ -14,6 +14,15 @@
   .address{
     background: #fff;
   }
+  .no-default{
+    text-align: center;
+    .fa-map-marker{
+      font-size: 1rem;
+    }
+    .open-popup,.fa-map-marker{
+      color: #ff5e7a;
+    }
+  }
   .inner{
     display: -webkit-box;
     display: box;
