--- a/public/style/global.css
+++ b/public/style/global.css
@@ -1002,6 +1002,16 @@ header.bar.bar-nav form .search-btn {
 .create_order .address {
   background: #fff;
 }
+.create_order .no-default {
+  text-align: center;
+}
+.create_order .no-default .fa-map-marker {
+  font-size: 1rem;
+}
+.create_order .no-default .open-popup,
+.create_order .no-default .fa-map-marker {
+  color: #ff5e7a;
+}
 .create_order .inner {
   display: -webkit-box;
   display: box;
