--- a/public/style/mobile/order.css
+++ b/public/style/mobile/order.css
@@ -13,6 +13,16 @@
 .create_order .address {
   background: #fff;
 }
+.create_order .no-default {
+  text-align: center;
+}
+.create_order .no-default .fa-map-marker {
+  font-size: 1rem;
+}
+.create_order .no-default .open-popup,
+.create_order .no-default .fa-map-marker {
+  color: #ff5e7a;
+}
 .create_order .inner {
   display: -webkit-box;
   display: box;
