--- a/public/less/mobile/order.less
+++ b/public/less/mobile/order.less
@@ -15,12 +15,14 @@
     background: #fff;
   }
   .no-default{
+    display: block;
     text-align: center;
     .fa-map-marker{
       font-size: 1rem;
     }
     .open-popup,.fa-map-marker{
       color: #ff5e7a;
+      display: inline;
     }
   }
   .inner{
