--- a/public/style/mobile/order.css
+++ b/public/style/mobile/order.css
@@ -14,6 +14,7 @@
   background: #fff;
 }
 .create_order .no-default {
+  display: block;
   text-align: center;
 }
 .create_order .no-default .fa-map-marker {
@@ -22,6 +23,7 @@
 .create_order .no-default .open-popup,
 .create_order .no-default .fa-map-marker {
   color: #ff5e7a;
+  display: inline;
 }
 .create_order .inner {
   display: -webkit-box;
