--- a/public/less/mobile/order.less
+++ b/public/less/mobile/order.less
@@ -13,22 +13,27 @@
   }
   .address{
     background: #fff;
+    margin-bottom: 0.5rem;
+    border-bottom: 1px solid #e5e5e5;
   }
   .no-default{
-    display: block;
+    width: 100%;
     text-align: center;
     .fa-map-marker{
       font-size: 1rem;
     }
+    p{
+      line-height: 1;
+    }
     .open-popup,.fa-map-marker{
       color: #ff5e7a;
-      display: inline;
+      display: inline !important;
     }
   }
   .inner{
     display: -webkit-box;
     display: box;
-    height: 2rem;
+    // height: 2rem;
     padding: 0.5rem;
     box-sizing: content-box;
     .addr_detail{
