--- a/app/views/mobile/order/create_order.jade
+++ b/app/views/mobile/order/create_order.jade
@@ -12,17 +12,23 @@ block content
         .address.default
           .inner
             if default_addr
-              .location_icon
+              .default-addr
+                .location_icon
+                  i.fa.fa-map-marker
+                .addr_detail
+                  input(type="hidden",name="order[address]",value="#{default_addr._id}")
+                  .contact
+                    em.default-label.j-default-label 默认
+                    | 收货人：#{default_addr.recipient} &nbsp;&nbsp;&nbsp;#{default_addr.tel}
+                  .detail #{default_addr.address}
+                .edit_addr
+                  a.fa.fa-angle-right.open-popup(href="javascript:;",data-popup=".popup-address")
+              .no-default.hide
                 i.fa.fa-map-marker
-              .addr_detail
-                input(type="hidden",name="order[address]",value="#{default_addr._id}")
-                .contact
-                  em.default-label.j-default-label 默认
-                  | 收货人：#{default_addr.recipient} &nbsp;&nbsp;&nbsp;#{default_addr.tel}
-                .detail #{default_addr.address}
-              .edit_addr
-                a.fa.fa-angle-right.open-popup(href="javascript:;",data-popup=".popup-address")
+                p 还没有收货地址,
+                  a.open-popup(href="javascript:;",data-popup=".popup-new") 去添加
             else
+              .default-addr.hide
               .no-default
                 i.fa.fa-map-marker
                 p 还没有收货地址,
@@ -213,6 +219,11 @@ block scripts
         $.get('/address/delete',{_id: addrid},function(result){
          console.log(result);
         });
+
+        if($('.popup-address .address').length == 0){
+          $('.address.default .default-addr').empty().address('hide');
+          $('.address.default .no-default').removeClass('hide');
+        }
       });
 
       $(document).on('click','.j-select-addr',function(e){
@@ -221,6 +232,10 @@ block scripts
           $('#order .address').addClass('default');
         }else{
           $('#order .address').removeClass('default');
+        }
+        if($('.default-addr').hasClass('hide')){
+          $('.default-addr').removeClass('hide');
+          $('.no-default').addClass('hide');
         }
         var detail = $(this).parents('.address').find('.addr_detail').html();
         $('#order .addr_detail').empty().html(detail);
